# rampy

./: .buildinfo  .gitignore  .readthedocs.yaml  .travis.yml  API.html  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Diamond_Pressure.py  HF_Treatment.py  HF_Treatment_Auto.py  HT_dec.py  IR_dec_comb.py  I_Io_calc.py  LF_Treatment.py  LF_dec.py  MANIFEST  MANIFEST.in  NEWS.md  README.md  README.txt  baseline.html  cleaning.py  dac.html  environment.yml  examples.html  firststeps.html  genindex.html  index.html  installation.html  machinelearning.html  maps.html  modules.html  news.html  objects.inv  peakfitting.html  philosophy.html  plotting.html  preprocessing.html  py-modindex.html  pyproject.toml  (+9 more)
.doctrees/: API.doctree  baseline.doctree  dac.doctree  environment.pickle  examples.doctree  firststeps.doctree  index.doctree  installation.doctree  machinelearning.doctree  maps.doctree  modules.doctree  news.doctree  peakfitting.doctree  philosophy.doctree  plotting.doctree  preprocessing.doctree  setup.doctree  signalparams.doctree  smoothing.doctree  utils.doctree
_sources/: API.rst.txt  baseline.rst.txt  index.rst.txt  installation.rst.txt  machinelearning.rst.txt  maps.rst.txt  modules.rst.txt  news.rst.txt  peakfitting.rst.txt  plotting.rst.txt  preprocessing.rst.txt  signalparams.rst.txt  smoothing.rst.txt  utils.rst.txt
docs/: baseline.rst  conf.py  examples.rst  firststeps.rst  index.html  index.rst  installation.rst  machinelearning.rst  make.bat  maps.rst  modules.rst  news.rst  peakfitting.rst  plotting.rst  preprocessing.rst  rampy.tests.rst  requirements.txt  signalparams.rst
examples/: Baseline.ipynb  Baseline_and_Centroid_determination.ipynb  Diamond_Pressure.py  HF_Treatment_Auto.py  HT_dec.py  LF_dec.py  LS4.txt  Machine Learning Exploration.ipynb  Machine Learning Regression.ipynb  MachineLearning_Classification.ipynb  Maps_example.ipynb  Mixing_spectra.ipynb  Normalisation.ipynb  README.md  Raman_spectrum_fitting.ipynb  Remove_Ctx_MI.py  Resample_and_flip_spectra.ipynb  Smoothing.ipynb  Untitled.ipynb  baseline_fit.ipynb
legacy_code/: Diamond_Pressure.py  LF_Treatment.py  README.md  rameau_construction
lib-charles/: GNinversion.py  IRTABS.py  long.py  spectratools.py  taux.py
notebooks/: Baseline_and_Centroid.html  Baseline_and_Centroid.ipynb  ML_Classification.html  ML_Exploration.html  ML_Regression.html  Maps.html  Mixing.html  Raman_fitting.html  Resample_and_flip.html
rampy/: Rampy_example.ipynb  __init__.py  baseline.py  filters.py  functions.py  long.py  maps.py  mixing.py  ml_classification.py  ml_exploration.py  ml_regressor.py  peak_area.py  peak_shapes.py  rameau.py  setup.py  spectranization.py  spectratools.py  tlcorrection.py
src/: GNinversion.py  deconv.py  long.m  spectratools.py
tests/: __init__.py  test_baseline.py  test_dac.py  test_mixing.py  test_peakarea.py  (+7 more)
(+590 files in other folders)
