[build-system]
requires = ["setuptools >= 61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "rampy"
version = "0.6.2"
dependencies = [
    "numpy>=1.12",
    "scipy>=1.10.0",
    "scikit-learn>=1.0.0",
    "pandas",
    "xlrd",
    "matplotlib",
    "cvxpy>=1.1",
    "plotly"
]
authors = [
  {name = "Charles Le Losq", email = "lelosq@ipgp.fr"},
]
requires-python = ">=3.10"
license = {file = "LICENSE"}
description = "A Python module containing functions to treat spectroscopic (XANES, Raman, IR...) data"
readme = "README.md"
keywords = ["spectroscopy", "data", "treatment", "Raman", "XANES", "Infrared", "NMR"]
classifiers = [
  "Development Status :: 5 - Production/Stable",
  "Programming Language :: Python"
]

[project.optional-dependencies]
gcvspline = ["gcvspline"]

[project.urls]
Homepage = "https://github.com/charlesll/rampy/"
Documentation = "http://charlesll.github.io/rampy/html/index.html"
Repository = "https://github.com/charlesll/rampy.git"
"Bug Tracker" = "https://github.com/charlesll/rampy/issues"
Changelog = "https://github.com/charlesll/rampy/NEWS.md"
