[metadata]
name = rampy
version = 0.4.9
author = Charles Le Losq
author_email = lelosq@ipgp.fr
license = GNU-GPLv2
description = A Python module containing functions to treat spectroscopic (XANES, Raman, IR...) data
url = https://github.com/charlesll/rampy
long_description = file: README.md
long_description_content_type = text/markdown

[options]
packages = rampy, rampy.tests
zip_safe = False
install_requires = numpy>=1.12; scipy; scikit-learn; pandas; xlrd

[options.extras_require]
gcvspline = gcvspline
mixing = cvxpy>=1.1
